--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
 @font-face {
-    font-family: 'MiFuente';
+    font-family: 'Poppins';
     src: url('fonts/Poppins-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
 }
+
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('fonts/Poppins-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
 
 * {
     margin: 0;
@@ -11,7 +24,6 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family:  'Poppins';
     list-style: none;
 }
 
@@ -32,7 +44,7 @@ html{
 }
 
 body {
-    font-family: 'MiFuente';
+    font-family: 'Poppins', sans-serif;
     transition: all 0.3s ease;
     background-image: var(--background-image, none);
     background-color: var(--primary-color);
