--- a/style.css
+++ b/style.css
@@ -1108,6 +1108,11 @@ span{
         margin: 0 auto;
     }
     
+    .btn-group{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
 
 
 
